// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openApiTsClientGenerator - spec compliance > should JSON-serialise a content-based query parameter with marshalled dates > client.gen.ts 1`] = `
"import type {
  ContentParamRequestQueryParameters,
  Filter,
  ContentParamRequest,
} from './types.gen.js';

/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  public static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));

  public static ContentParamRequestQueryParameters = {
    toJson: (model: ContentParamRequestQueryParameters): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.filter === undefined
          ? {}
          : {
              filter: $IO.Filter.toJson(model.filter),
            }),
      };
    },
    fromJson: (json: any): ContentParamRequestQueryParameters => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        filter: $IO.Filter.fromJson(json['filter']),
      };
    },
  };

  public static Filter = {
    toJson: (model: Filter): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.field === undefined
          ? {}
          : {
              field: model.field,
            }),
        ...(model.since === undefined
          ? {}
          : {
              since: model.since.toISOString(),
            }),
      };
    },
    fromJson: (json: any): Filter => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        field: json['field'],
        ...(json['since'] === undefined
          ? {}
          : {
              since: new Date(json['since']),
            }),
      };
    },
  };
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.contentParam = this.contentParam.bind(this);
  }

  private $collectionDelimiters: { [format: string]: string } = {
    csv: ',',
    ssv: ' ',
    pipes: '|',
  };

  private $deepObject = (key: string, value: any): string[] => {
    if (value === undefined || value === null) {
      return [];
    }
    if (typeof value !== 'object') {
      return [\`\${key}=\${encodeURIComponent(String(value))}\`];
    }
    return Object.entries(value).flatMap(([prop, v]) =>
      this.$deepObject(\`\${key}[\${encodeURIComponent(prop)}]\`, v),
    );
  };

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: {
      [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' | 'deepObject';
    },
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) =>
        withParams.replace(\`{\${key}}\`, encodeURIComponent(\`\${value}\`)),
      path,
    );
    const queryString = Object.entries(queryParameters)
      .flatMap(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value.map(
            (v) => \`\${encodeURIComponent(key)}=\${encodeURIComponent(\`\${v}\`)}\`,
          );
        }
        if (
          collectionFormats?.[key] === 'deepObject' &&
          value !== null &&
          typeof value === 'object'
        ) {
          return this.$deepObject(encodeURIComponent(key), value);
        }
        const delimiter =
          this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
        return [
          \`\${encodeURIComponent(key)}=\${encodeURIComponent(Array.isArray(value) ? value.map(String).join(delimiter) : String(value))}\`,
        ];
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      const delimiter =
        this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
      return [
        [
          key,
          Array.isArray(value)
            ? value.map(String).join(delimiter)
            : String(value),
        ],
      ];
    });
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async contentParam(input: ContentParamRequest): Promise<string> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } =
      $IO.ContentParamRequestQueryParameters.toJson(input);
    if (queryParameters['filter'] !== undefined) {
      queryParameters['filter'] = JSON.stringify(queryParameters['filter']);
    }
    const headerParameters: { [key: string]: any } = {};
    const queryCollectionFormats = {
      filter: 'multi',
    } as const;

    const body = undefined;

    const response = await this.$fetch(
      this.$url(
        '/query',
        pathParameters,
        queryParameters,
        queryCollectionFormats,
      ),
      {
        headers: this.$headers(headerParameters),
        method: 'GET',
        body,
      },
    );

    if (response.status === 200) {
      return await response.json();
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;

exports[`openApiTsClientGenerator - spec compliance > should JSON-serialise a content-based query parameter with marshalled dates > types.gen.ts 1`] = `
"export type ContentParamRequestQueryParameters = {
  filter: Filter;
};
export type Filter = {
  field: string;
  since?: Date;
};

export type ContentParamRequest = ContentParamRequestQueryParameters;
export type ContentParamError = never;
"
`;

exports[`openApiTsClientGenerator - spec compliance > should keep a decimal format string un-corrupted and round-trip byte fields > client.gen.ts 1`] = `
"import type { BlobMeta, PutBlobMetaRequest } from './types.gen.js';

/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  public static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));

  public static BlobMeta = {
    toJson: (model: BlobMeta): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.data === undefined
          ? {}
          : {
              data: model.data,
            }),
        ...(model.price === undefined
          ? {}
          : {
              price: model.price,
            }),
      };
    },
    fromJson: (json: any): BlobMeta => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        data: json['data'],
        price: json['price'],
      };
    },
  };
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.putBlobMeta = this.putBlobMeta.bind(this);
  }

  private $collectionDelimiters: { [format: string]: string } = {
    csv: ',',
    ssv: ' ',
    pipes: '|',
  };

  private $deepObject = (key: string, value: any): string[] => {
    if (value === undefined || value === null) {
      return [];
    }
    if (typeof value !== 'object') {
      return [\`\${key}=\${encodeURIComponent(String(value))}\`];
    }
    return Object.entries(value).flatMap(([prop, v]) =>
      this.$deepObject(\`\${key}[\${encodeURIComponent(prop)}]\`, v),
    );
  };

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: {
      [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' | 'deepObject';
    },
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) =>
        withParams.replace(\`{\${key}}\`, encodeURIComponent(\`\${value}\`)),
      path,
    );
    const queryString = Object.entries(queryParameters)
      .flatMap(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value.map(
            (v) => \`\${encodeURIComponent(key)}=\${encodeURIComponent(\`\${v}\`)}\`,
          );
        }
        if (
          collectionFormats?.[key] === 'deepObject' &&
          value !== null &&
          typeof value === 'object'
        ) {
          return this.$deepObject(encodeURIComponent(key), value);
        }
        const delimiter =
          this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
        return [
          \`\${encodeURIComponent(key)}=\${encodeURIComponent(Array.isArray(value) ? value.map(String).join(delimiter) : String(value))}\`,
        ];
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      const delimiter =
        this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
      return [
        [
          key,
          Array.isArray(value)
            ? value.map(String).join(delimiter)
            : String(value),
        ],
      ];
    });
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async putBlobMeta(input: PutBlobMetaRequest): Promise<BlobMeta> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};
    if (!this.$config.options?.omitContentTypeHeader) {
      headerParameters['Content-Type'] = 'application/json';
    }
    const body =
      typeof input === 'object'
        ? JSON.stringify($IO.BlobMeta.toJson(input))
        : String($IO.BlobMeta.toJson(input));

    const response = await this.$fetch(
      this.$url('/blob-meta', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'POST',
        body,
      },
    );

    if (response.status === 200) {
      return $IO.BlobMeta.fromJson(await response.json());
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;

exports[`openApiTsClientGenerator - spec compliance > should keep a decimal format string un-corrupted and round-trip byte fields > types.gen.ts 1`] = `
"export type BlobMeta = {
  data: string;
  price: string;
};

export type PutBlobMetaRequest = BlobMeta;
export type PutBlobMetaError = never;
"
`;

exports[`openApiTsClientGenerator - spec compliance > should omit the body entirely for an optional request body > client.gen.ts 1`] = `
"import type { SearchRequestContent, SearchRequest } from './types.gen.js';

/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  public static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));

  public static SearchRequestContent = {
    toJson: (model: SearchRequestContent): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.query === undefined
          ? {}
          : {
              query: model.query,
            }),
      };
    },
    fromJson: (json: any): SearchRequestContent => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        query: json['query'],
      };
    },
  };
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.search = this.search.bind(this);
  }

  private $collectionDelimiters: { [format: string]: string } = {
    csv: ',',
    ssv: ' ',
    pipes: '|',
  };

  private $deepObject = (key: string, value: any): string[] => {
    if (value === undefined || value === null) {
      return [];
    }
    if (typeof value !== 'object') {
      return [\`\${key}=\${encodeURIComponent(String(value))}\`];
    }
    return Object.entries(value).flatMap(([prop, v]) =>
      this.$deepObject(\`\${key}[\${encodeURIComponent(prop)}]\`, v),
    );
  };

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: {
      [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' | 'deepObject';
    },
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) =>
        withParams.replace(\`{\${key}}\`, encodeURIComponent(\`\${value}\`)),
      path,
    );
    const queryString = Object.entries(queryParameters)
      .flatMap(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value.map(
            (v) => \`\${encodeURIComponent(key)}=\${encodeURIComponent(\`\${v}\`)}\`,
          );
        }
        if (
          collectionFormats?.[key] === 'deepObject' &&
          value !== null &&
          typeof value === 'object'
        ) {
          return this.$deepObject(encodeURIComponent(key), value);
        }
        const delimiter =
          this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
        return [
          \`\${encodeURIComponent(key)}=\${encodeURIComponent(Array.isArray(value) ? value.map(String).join(delimiter) : String(value))}\`,
        ];
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      const delimiter =
        this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
      return [
        [
          key,
          Array.isArray(value)
            ? value.map(String).join(delimiter)
            : String(value),
        ],
      ];
    });
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async search(input?: SearchRequest): Promise<string> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};
    if (!this.$config.options?.omitContentTypeHeader) {
      headerParameters['Content-Type'] = 'application/json';
    }
    const body =
      input === undefined
        ? undefined
        : typeof input === 'object'
          ? JSON.stringify($IO.SearchRequestContent.toJson(input))
          : String($IO.SearchRequestContent.toJson(input));

    const response = await this.$fetch(
      this.$url('/search', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'POST',
        body,
      },
    );

    if (response.status === 200) {
      return await response.json();
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;

exports[`openApiTsClientGenerator - spec compliance > should omit the body entirely for an optional request body > types.gen.ts 1`] = `
"export type SearchRequestContent = {
  query: string;
};

export type SearchRequest = SearchRequestContent | undefined;
export type SearchError = never;
"
`;

exports[`openApiTsClientGenerator - spec compliance > should parse 4XX range responses as typed errors and 5XX text as raw text > client.gen.ts 1`] = `
"import type {
  GetThing4XXResponse,
  GetThingRequestPathParameters,
  GetThingRequest,
} from './types.gen.js';

/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  public static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));

  public static GetThing4XXResponse = {
    toJson: (model: GetThing4XXResponse): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.reason === undefined
          ? {}
          : {
              reason: model.reason,
            }),
      };
    },
    fromJson: (json: any): GetThing4XXResponse => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        reason: json['reason'],
      };
    },
  };

  public static GetThingRequestPathParameters = {
    toJson: (model: GetThingRequestPathParameters): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.id === undefined
          ? {}
          : {
              id: model.id,
            }),
      };
    },
    fromJson: (json: any): GetThingRequestPathParameters => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        id: json['id'],
      };
    },
  };
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.getThing = this.getThing.bind(this);
  }

  private $collectionDelimiters: { [format: string]: string } = {
    csv: ',',
    ssv: ' ',
    pipes: '|',
  };

  private $deepObject = (key: string, value: any): string[] => {
    if (value === undefined || value === null) {
      return [];
    }
    if (typeof value !== 'object') {
      return [\`\${key}=\${encodeURIComponent(String(value))}\`];
    }
    return Object.entries(value).flatMap(([prop, v]) =>
      this.$deepObject(\`\${key}[\${encodeURIComponent(prop)}]\`, v),
    );
  };

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: {
      [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' | 'deepObject';
    },
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) =>
        withParams.replace(\`{\${key}}\`, encodeURIComponent(\`\${value}\`)),
      path,
    );
    const queryString = Object.entries(queryParameters)
      .flatMap(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value.map(
            (v) => \`\${encodeURIComponent(key)}=\${encodeURIComponent(\`\${v}\`)}\`,
          );
        }
        if (
          collectionFormats?.[key] === 'deepObject' &&
          value !== null &&
          typeof value === 'object'
        ) {
          return this.$deepObject(encodeURIComponent(key), value);
        }
        const delimiter =
          this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
        return [
          \`\${encodeURIComponent(key)}=\${encodeURIComponent(Array.isArray(value) ? value.map(String).join(delimiter) : String(value))}\`,
        ];
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      const delimiter =
        this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
      return [
        [
          key,
          Array.isArray(value)
            ? value.map(String).join(delimiter)
            : String(value),
        ],
      ];
    });
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async getThing(input: GetThingRequest): Promise<string> {
    const pathParameters: { [key: string]: any } =
      $IO.GetThingRequestPathParameters.toJson(input);
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};

    const body = undefined;

    const response = await this.$fetch(
      this.$url('/things/{id}', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'GET',
        body,
      },
    );

    if (response.status === 200) {
      return await response.json();
    }
    if (response.status >= 400 && response.status < 500) {
      throw {
        status: response.status,
        error: $IO.GetThing4XXResponse.fromJson(await response.json()),
      };
    }
    if (response.status >= 500 && response.status < 600) {
      throw {
        status: response.status,
        error: await response.text(),
      };
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;

exports[`openApiTsClientGenerator - spec compliance > should parse 4XX range responses as typed errors and 5XX text as raw text > types.gen.ts 1`] = `
"export type GetThing4XXResponse = {
  reason: string;
};
export type GetThingRequestPathParameters = {
  id: string;
};

export type GetThingRequest = GetThingRequestPathParameters;
export type GetThing4XXError = {
  status: _4XX;
  error: GetThing4XXResponse;
};
export type GetThing5XXError = {
  status: _5XX;
  error: string;
};
export type GetThingError = GetThing4XXError | GetThing5XXError;
export type _4XX =
  | 400
  | 401
  | 402
  | 403
  | 404
  | 405
  | 406
  | 407
  | 408
  | 409
  | 410
  | 411
  | 412
  | 413
  | 414
  | 415
  | 416
  | 417
  | 418
  | 419
  | 420
  | 421
  | 422
  | 423
  | 424
  | 425
  | 426
  | 427
  | 428
  | 429
  | 430
  | 431
  | 432
  | 433
  | 434
  | 435
  | 436
  | 437
  | 438
  | 439
  | 440
  | 441
  | 442
  | 443
  | 444
  | 445
  | 446
  | 447
  | 448
  | 449
  | 450
  | 451
  | 452
  | 453
  | 454
  | 455
  | 456
  | 457
  | 458
  | 459
  | 460
  | 461
  | 462
  | 463
  | 464
  | 465
  | 466
  | 467
  | 468
  | 469
  | 470
  | 471
  | 472
  | 473
  | 474
  | 475
  | 476
  | 477
  | 478
  | 479
  | 480
  | 481
  | 482
  | 483
  | 484
  | 485
  | 486
  | 487
  | 488
  | 489
  | 490
  | 491
  | 492
  | 493
  | 494
  | 495
  | 496
  | 497
  | 498
  | 499;
export type _5XX =
  | 500
  | 501
  | 502
  | 503
  | 504
  | 505
  | 506
  | 507
  | 508
  | 509
  | 510
  | 511
  | 512
  | 513
  | 514
  | 515
  | 516
  | 517
  | 518
  | 519
  | 520
  | 521
  | 522
  | 523
  | 524
  | 525
  | 526
  | 527
  | 528
  | 529
  | 530
  | 531
  | 532
  | 533
  | 534
  | 535
  | 536
  | 537
  | 538
  | 539
  | 540
  | 541
  | 542
  | 543
  | 544
  | 545
  | 546
  | 547
  | 548
  | 549
  | 550
  | 551
  | 552
  | 553
  | 554
  | 555
  | 556
  | 557
  | 558
  | 559
  | 560
  | 561
  | 562
  | 563
  | 564
  | 565
  | 566
  | 567
  | 568
  | 569
  | 570
  | 571
  | 572
  | 573
  | 574
  | 575
  | 576
  | 577
  | 578
  | 579
  | 580
  | 581
  | 582
  | 583
  | 584
  | 585
  | 586
  | 587
  | 588
  | 589
  | 590
  | 591
  | 592
  | 593
  | 594
  | 595
  | 596
  | 597
  | 598
  | 599;
"
`;

exports[`openApiTsClientGenerator - spec compliance > should send multipart parts with content types declared by the encoding object > client.gen.ts 1`] = `
"import type {
  CreateDocumentRequestContent,
  CreateDocumentRequestContentMetadata,
  CreateDocumentRequest,
} from './types.gen.js';

/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  public static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));

  public static CreateDocumentRequestContent = {
    toJson: (model: CreateDocumentRequestContent): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.metadata === undefined
          ? {}
          : {
              metadata: $IO.CreateDocumentRequestContentMetadata.toJson(
                model.metadata,
              ),
            }),
        ...(model.file === undefined
          ? {}
          : {
              file: model.file,
            }),
      };
    },
    fromJson: (json: any): CreateDocumentRequestContent => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        metadata: $IO.CreateDocumentRequestContentMetadata.fromJson(
          json['metadata'],
        ),
        file: json['file'],
      };
    },
  };

  public static CreateDocumentRequestContentMetadata = {
    toJson: (model: CreateDocumentRequestContentMetadata): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.title === undefined
          ? {}
          : {
              title: model.title,
            }),
      };
    },
    fromJson: (json: any): CreateDocumentRequestContentMetadata => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        title: json['title'],
      };
    },
  };
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.createDocument = this.createDocument.bind(this);
  }

  private $collectionDelimiters: { [format: string]: string } = {
    csv: ',',
    ssv: ' ',
    pipes: '|',
  };

  private $deepObject = (key: string, value: any): string[] => {
    if (value === undefined || value === null) {
      return [];
    }
    if (typeof value !== 'object') {
      return [\`\${key}=\${encodeURIComponent(String(value))}\`];
    }
    return Object.entries(value).flatMap(([prop, v]) =>
      this.$deepObject(\`\${key}[\${encodeURIComponent(prop)}]\`, v),
    );
  };

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: {
      [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' | 'deepObject';
    },
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) =>
        withParams.replace(\`{\${key}}\`, encodeURIComponent(\`\${value}\`)),
      path,
    );
    const queryString = Object.entries(queryParameters)
      .flatMap(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value.map(
            (v) => \`\${encodeURIComponent(key)}=\${encodeURIComponent(\`\${v}\`)}\`,
          );
        }
        if (
          collectionFormats?.[key] === 'deepObject' &&
          value !== null &&
          typeof value === 'object'
        ) {
          return this.$deepObject(encodeURIComponent(key), value);
        }
        const delimiter =
          this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
        return [
          \`\${encodeURIComponent(key)}=\${encodeURIComponent(Array.isArray(value) ? value.map(String).join(delimiter) : String(value))}\`,
        ];
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      const delimiter =
        this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
      return [
        [
          key,
          Array.isArray(value)
            ? value.map(String).join(delimiter)
            : String(value),
        ],
      ];
    });
  };

  private $formData = (
    model: { [key: string]: any },
    partContentTypes?: { [key: string]: string },
  ): FormData => {
    const formData = new FormData();
    const append = (key: string, value: any): void => {
      if (value === undefined || value === null) {
        return;
      }
      const partContentType = partContentTypes?.[key];
      if (value instanceof Blob || typeof value === 'string') {
        // A declared part content type overrides the default (text/plain for
        // strings, the Blob's own type otherwise)
        if (partContentType) {
          formData.append(key, new Blob([value], { type: partContentType }));
        } else {
          formData.append(key, value);
        }
      } else if (Array.isArray(value)) {
        value.forEach((v) => append(key, v));
      } else if (typeof value === 'object') {
        const serialized = JSON.stringify(value);
        if (partContentType) {
          formData.append(
            key,
            new Blob([serialized], { type: partContentType }),
          );
        } else {
          formData.append(key, serialized);
        }
      } else {
        formData.append(key, String(value));
      }
    };
    Object.entries(model).forEach(([key, value]) => append(key, value));
    return formData;
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async createDocument(input: CreateDocumentRequest): Promise<string> {
    const pathParameters: { [key: string]: any } = {};
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};
    const body = this.$formData(
      $IO.CreateDocumentRequestContent.toJson(input),
      { metadata: 'application/json' },
    );

    const response = await this.$fetch(
      this.$url('/documents', pathParameters, queryParameters),
      {
        headers: this.$headers(headerParameters),
        method: 'POST',
        body,
      },
    );

    if (response.status === 200) {
      return await response.json();
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;

exports[`openApiTsClientGenerator - spec compliance > should send multipart parts with content types declared by the encoding object > types.gen.ts 1`] = `
"export type CreateDocumentRequestContent = {
  metadata: CreateDocumentRequestContentMetadata;
  file: Blob;
};
export type CreateDocumentRequestContentMetadata = {
  title: string;
};

export type CreateDocumentRequest = CreateDocumentRequestContent;
export type CreateDocumentError = never;
"
`;

exports[`openApiTsClientGenerator - spec compliance > should serialise exploded matrix and label path styles > client.gen.ts 1`] = `
"import type {
  StyledRequestPathParameters,
  StyledRequest,
} from './types.gen.js';

/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  public static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));

  public static StyledRequestPathParameters = {
    toJson: (model: StyledRequestPathParameters): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.coords === undefined
          ? {}
          : {
              coords: model.coords,
            }),
        ...(model.tags === undefined
          ? {}
          : {
              tags: model.tags,
            }),
      };
    },
    fromJson: (json: any): StyledRequestPathParameters => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        coords: json['coords'],
        tags: json['tags'],
      };
    },
  };
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.styled = this.styled.bind(this);
  }

  private $collectionDelimiters: { [format: string]: string } = {
    csv: ',',
    ssv: ' ',
    pipes: '|',
  };

  private $deepObject = (key: string, value: any): string[] => {
    if (value === undefined || value === null) {
      return [];
    }
    if (typeof value !== 'object') {
      return [\`\${key}=\${encodeURIComponent(String(value))}\`];
    }
    return Object.entries(value).flatMap(([prop, v]) =>
      this.$deepObject(\`\${key}[\${encodeURIComponent(prop)}]\`, v),
    );
  };

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: {
      [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' | 'deepObject';
    },
    pathStyles?: {
      [key: string]: { style: 'matrix' | 'label'; explode: boolean };
    },
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) => {
        const pathStyle = pathStyles?.[key];
        let rendered: string;
        if (pathStyle?.style === 'matrix') {
          // RFC 6570 path-style expansion: ;key=a,b (explode: ;key=a;key=b)
          rendered =
            Array.isArray(value) && pathStyle.explode
              ? value
                  .map((v) => \`;\${key}=\${encodeURIComponent(\`\${v}\`)}\`)
                  .join('')
              : \`;\${key}=\${(Array.isArray(value) ? value : [value]).map((v) => encodeURIComponent(\`\${v}\`)).join(',')}\`;
        } else if (pathStyle?.style === 'label') {
          // RFC 6570 label expansion: .a,b (explode: .a.b)
          rendered = \`.\${(Array.isArray(value) ? value : [value]).map((v) => encodeURIComponent(\`\${v}\`)).join(pathStyle.explode ? '.' : ',')}\`;
        } else {
          rendered = encodeURIComponent(\`\${value}\`);
        }
        return withParams.replace(\`{\${key}}\`, rendered);
      },
      path,
    );
    const queryString = Object.entries(queryParameters)
      .flatMap(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value.map(
            (v) => \`\${encodeURIComponent(key)}=\${encodeURIComponent(\`\${v}\`)}\`,
          );
        }
        if (
          collectionFormats?.[key] === 'deepObject' &&
          value !== null &&
          typeof value === 'object'
        ) {
          return this.$deepObject(encodeURIComponent(key), value);
        }
        const delimiter =
          this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
        return [
          \`\${encodeURIComponent(key)}=\${encodeURIComponent(Array.isArray(value) ? value.map(String).join(delimiter) : String(value))}\`,
        ];
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      const delimiter =
        this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
      return [
        [
          key,
          Array.isArray(value)
            ? value.map(String).join(delimiter)
            : String(value),
        ],
      ];
    });
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async styled(input: StyledRequest): Promise<string> {
    const pathParameters: { [key: string]: any } =
      $IO.StyledRequestPathParameters.toJson(input);
    const queryParameters: { [key: string]: any } = {};
    const headerParameters: { [key: string]: any } = {};
    const pathParameterStyles = {
      coords: { style: 'matrix', explode: true },
      tags: { style: 'label', explode: true },
    } as const;

    const body = undefined;

    const response = await this.$fetch(
      this.$url(
        '/m/{coords}/l/{tags}',
        pathParameters,
        queryParameters,
        undefined,
        pathParameterStyles,
      ),
      {
        headers: this.$headers(headerParameters),
        method: 'GET',
        body,
      },
    );

    if (response.status === 200) {
      return await response.json();
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;

exports[`openApiTsClientGenerator - spec compliance > should serialise exploded matrix and label path styles > types.gen.ts 1`] = `
"export type StyledRequestPathParameters = {
  coords: Array<number>;
  tags: Array<string>;
};

export type StyledRequest = StyledRequestPathParameters;
export type StyledError = never;
"
`;

exports[`openApiTsClientGenerator - spec compliance > should serialise matrix and label path styles and allowReserved query parameters > client.gen.ts 1`] = `
"import type {
  StyledRequestPathParameters,
  StyledRequestQueryParameters,
  StyledRequest,
} from './types.gen.js';

/**
 * Utility for serialisation and deserialisation of API types.
 */
export class $IO {
  public static $mapValues = (data: any, fn: (item: any) => any) =>
    Object.fromEntries(Object.entries(data).map(([k, v]) => [k, fn(v)]));

  public static StyledRequestPathParameters = {
    toJson: (model: StyledRequestPathParameters): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.coords === undefined
          ? {}
          : {
              coords: model.coords,
            }),
        ...(model.tags === undefined
          ? {}
          : {
              tags: model.tags,
            }),
      };
    },
    fromJson: (json: any): StyledRequestPathParameters => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        coords: json['coords'],
        tags: json['tags'],
      };
    },
  };

  public static StyledRequestQueryParameters = {
    toJson: (model: StyledRequestQueryParameters): any => {
      if (model === undefined || model === null) {
        return model;
      }
      return {
        ...(model.filter === undefined
          ? {}
          : {
              filter: model.filter,
            }),
      };
    },
    fromJson: (json: any): StyledRequestQueryParameters => {
      if (json === undefined || json === null) {
        return json;
      }
      return {
        filter: json['filter'],
      };
    },
  };
}

/**
 * Client configuration for TestApi
 */
export interface TestApiConfig {
  /**
   * Base URL for the API
   */
  url: string;
  /**
   * Custom instance of fetch. By default the global 'fetch' is used.
   * You can override this to add custom middleware for use cases such as adding authentication headers.
   */
  fetch?: typeof fetch;
  /**
   * Additional configuration
   */
  options?: {
    /**
     * By default, the client will add a Content-Type header, set to the media type defined for
     * the request in the OpenAPI specification.
     * Set this to false to omit this header.
     */
    omitContentTypeHeader?: boolean;
  };
}

/**
 * API Client for TestApi
 */
export class TestApi {
  private $config: TestApiConfig;

  constructor(config: TestApiConfig) {
    this.$config = config;

    this.styled = this.styled.bind(this);
  }

  private $collectionDelimiters: { [format: string]: string } = {
    csv: ',',
    ssv: ' ',
    pipes: '|',
  };

  private $deepObject = (key: string, value: any): string[] => {
    if (value === undefined || value === null) {
      return [];
    }
    if (typeof value !== 'object') {
      return [\`\${key}=\${encodeURIComponent(String(value))}\`];
    }
    return Object.entries(value).flatMap(([prop, v]) =>
      this.$deepObject(\`\${key}[\${encodeURIComponent(prop)}]\`, v),
    );
  };

  private $url = (
    path: string,
    pathParameters: { [key: string]: any },
    queryParameters: { [key: string]: any },
    collectionFormats?: {
      [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' | 'deepObject';
    },
    pathStyles?: {
      [key: string]: { style: 'matrix' | 'label'; explode: boolean };
    },
    allowReserved?: string[],
  ): string => {
    const baseUrl = this.$config.url.endsWith('/')
      ? this.$config.url.slice(0, -1)
      : this.$config.url;
    // Reserved characters stay literal when a query parameter declares allowReserved
    const encodeQueryValue = (key: string, v: string): string =>
      allowReserved?.includes(key)
        ? encodeURIComponent(v).replace(
            /%(2F|3A|3F|23|5B|5D|40|21|24|26|27|28|29|2A|2B|2C|3B|3D)/gi,
            (m) => decodeURIComponent(m),
          )
        : encodeURIComponent(v);
    const pathWithParameters = Object.entries(pathParameters).reduce(
      (withParams, [key, value]) => {
        const pathStyle = pathStyles?.[key];
        let rendered: string;
        if (pathStyle?.style === 'matrix') {
          // RFC 6570 path-style expansion: ;key=a,b (explode: ;key=a;key=b)
          rendered =
            Array.isArray(value) && pathStyle.explode
              ? value
                  .map((v) => \`;\${key}=\${encodeURIComponent(\`\${v}\`)}\`)
                  .join('')
              : \`;\${key}=\${(Array.isArray(value) ? value : [value]).map((v) => encodeURIComponent(\`\${v}\`)).join(',')}\`;
        } else if (pathStyle?.style === 'label') {
          // RFC 6570 label expansion: .a,b (explode: .a.b)
          rendered = \`.\${(Array.isArray(value) ? value : [value]).map((v) => encodeURIComponent(\`\${v}\`)).join(pathStyle.explode ? '.' : ',')}\`;
        } else {
          rendered = encodeURIComponent(\`\${value}\`);
        }
        return withParams.replace(\`{\${key}}\`, rendered);
      },
      path,
    );
    const queryString = Object.entries(queryParameters)
      .flatMap(([key, value]) => {
        if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
          return value.map(
            (v) =>
              \`\${encodeURIComponent(key)}=\${encodeQueryValue(key, \`\${v}\`)}\`,
          );
        }
        if (
          collectionFormats?.[key] === 'deepObject' &&
          value !== null &&
          typeof value === 'object'
        ) {
          return this.$deepObject(encodeURIComponent(key), value);
        }
        const delimiter =
          this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
        return [
          \`\${encodeURIComponent(key)}=\${encodeQueryValue(key, Array.isArray(value) ? value.map(String).join(delimiter) : String(value))}\`,
        ];
      })
      .join('&');
    return (
      baseUrl + pathWithParameters + (queryString ? \`?\${queryString}\` : '')
    );
  };

  private $headers = (
    headerParameters: { [key: string]: any },
    collectionFormats?: { [key: string]: 'multi' | 'csv' | 'ssv' | 'pipes' },
  ): [string, string][] => {
    return Object.entries(headerParameters).flatMap(([key, value]) => {
      if (Array.isArray(value) && collectionFormats?.[key] === 'multi') {
        return value.map((v) => [key, String(v)]) as [string, string][];
      }
      const delimiter =
        this.$collectionDelimiters[collectionFormats?.[key] ?? 'csv'] ?? ',';
      return [
        [
          key,
          Array.isArray(value)
            ? value.map(String).join(delimiter)
            : String(value),
        ],
      ];
    });
  };

  private $fetch: typeof fetch = (...args) =>
    (this.$config.fetch ?? fetch)(...args);

  public async styled(input: StyledRequest): Promise<string> {
    const pathParameters: { [key: string]: any } =
      $IO.StyledRequestPathParameters.toJson(input);
    const queryParameters: { [key: string]: any } =
      $IO.StyledRequestQueryParameters.toJson(input);
    const headerParameters: { [key: string]: any } = {};
    const queryCollectionFormats = {
      filter: 'multi',
    } as const;
    const pathParameterStyles = {
      coords: { style: 'matrix', explode: false },
      tags: { style: 'label', explode: false },
    } as const;

    const body = undefined;

    const response = await this.$fetch(
      this.$url(
        '/m/{coords}/l/{tags}',
        pathParameters,
        queryParameters,
        queryCollectionFormats,
        pathParameterStyles,
        ['filter'],
      ),
      {
        headers: this.$headers(headerParameters),
        method: 'GET',
        body,
      },
    );

    if (response.status === 200) {
      return await response.json();
    }
    throw new Error(
      \`Unknown response status \${response.status} returned by API\`,
    );
  }
}
"
`;

exports[`openApiTsClientGenerator - spec compliance > should serialise matrix and label path styles and allowReserved query parameters > types.gen.ts 1`] = `
"export type StyledRequestPathParameters = {
  coords: Array<number>;
  tags: Array<string>;
};
export type StyledRequestQueryParameters = {
  filter: string;
};

export type StyledRequest = StyledRequestPathParameters &
  StyledRequestQueryParameters;
export type StyledError = never;
"
`;
